--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,10 @@
 {
-    "name": "mmandbstudio/cakepuser",
+    "name": "mmandbstudio/cakepusher",
     "description": "tools to integrate Pusher with CakePHP",
     "type": "library",
     "license": "MIT",
     "require": {
         "php": ">=5.3.2"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "@stable"
     },
     "autoload": {
         "psr-4": {
